--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,7 +26,24 @@ jobs:
           cache: maven
 
       - name: Build with Maven
-        run: mvn -B clean package
+        shell: bash
+        run: |
+          set -euo pipefail
+          for attempt in 1 2 3; do
+            echo "Maven build attempt ${attempt}/3"
+            if mvn -B clean package \
+              -Dmaven.wagon.http.retryHandler.count=3 \
+              -Dmaven.wagon.http.connectionTimeout=30000 \
+              -Dmaven.wagon.rto=120000; then
+              exit 0
+            fi
+            if [ "$attempt" -lt 3 ]; then
+              echo "Build failed, retrying in 15s..."
+              sleep 15
+            fi
+          done
+          echo "Build failed after 3 attempts."
+          exit 1
 
       - name: Upload JAR artifacts
         if: success()
