--- a/src/main/resources/messages_zh.yml
+++ b/src/main/resources/messages_zh.yml
@@ -1,26 +1,26 @@
 messages:
-  black: "<gray>ºÚ·½</gray>"
-  white: "<white>°×·½</white>"
-  turn_info: "<yellow>ÂÖµ½<color>×ß×Ó£¡</yellow>"
-  mate_broadcast: "<gold>½«ËÀ£¡<winner>»ñÊ¤¡£</gold>"
-  check_warning: "<red>²»ÄÜÕâÑù×ß£ºÄãµÄ¹úÍõÕı±»½«¾ü»ò½«±»½«¾ü£¡</red>"
-  wrong_cell: "<yellow>Õâ¸ö¸ñ×Ó²»ÄÜ×ß£¬ÇëÑ¡ÔñÆäËû¸ñ¡£</yellow>"
-  promotion_choice: "<red>ÇëÏÈÑ¡ÔñÉı±äµÄÆå×Ó£¡</red>"
-  game_over: "<red>±¾¾ÖÒÑ½áÊø£¡Çë¿ªÊ¼ĞÂ¾Ö¡£</red>"
-  check_notification: "<yellow><color>£¬ÄãµÄ¹úÍõ±»½«¾üÁË£¡</yellow>"
-  stalemate_broadcast: "<gold>ºÍÆå£¡</gold>"
-  insufficient_material: "<gold>ºÍÆå£º×ÓÁ¦²»×ã¡£</gold>"
-  no_game: "<red>Î´ÕÒµ½½øĞĞÖĞµÄ¶Ô¾Ö¡£</red>"
-  not_player: "<red>Äã²»ÊÇÕâ¾ÖµÄÍæ¼Ò¡£</red>"
-  need_opponent: "<yellow>µÈ´ı¶ÔÊÖ¼ÓÈë¡£</yellow>"
-  need_bets: "<yellow>Ë«·½ĞèÔÚ¿ªÊ¼Ç°ÏÂ×¢¡£</yellow>"
-  bet_invalid: "<red>ÏÂ×¢½ğ¶îÎŞĞ§¡£</red>"
-  bet_set: "<green>ÏÂ×¢½ğ¶îÒÑÉèÖÃÎª <amount>¡£</green>"
-  bet_locked: "<red>±¾¾ÖÏÂ×¢ÒÑËø¶¨¡£</red>"
-  bet_insufficient: "<red>Óà¶î²»×ã£¬ÎŞ·¨Ëø¶¨ÏÂ×¢¡£</red>"
-  resign_broadcast: "<yellow><player> ÒÑÈÏÊä¡£</yellow>"
-  timeout_broadcast: "<yellow><winner> ³¬Ê±»ñÊ¤¡£</yellow>"
-  disconnect_loss: "<yellow><player> ¶ÏÏßÅĞ¸º¡£</yellow>"
-  command_usage: '<yellow>ÓÃ·¨£º/chess bet <amount> | /chess resign | /chess reload</yellow>'
-  reload_done: '<green>ÓïÑÔÎÄ¼şÒÑÖØÔØ¡£</green>'
-  no_permission: '<red>ÄãÃ»ÓĞÈ¨ÏŞ¡£</red>'
+  black: "<gray>é»‘æ–¹</gray>"
+  white: "<white>ç™½æ–¹</white>"
+  turn_info: "<yellow>è½®åˆ°<color>èµ°å­ï¼</yellow>"
+  mate_broadcast: "<gold>å°†æ­»ï¼<winner>è·èƒœã€‚</gold>"
+  check_warning: "<red>ä¸èƒ½è¿™æ ·èµ°ï¼šä½ çš„å›½ç‹æ­£è¢«å°†å†›æˆ–å°†è¢«å°†å†›ï¼</red>"
+  wrong_cell: "<yellow>è¿™ä¸ªæ ¼å­ä¸èƒ½èµ°ï¼Œè¯·é€‰æ‹©å…¶ä»–æ ¼ã€‚</yellow>"
+  promotion_choice: "<red>è¯·å…ˆé€‰æ‹©å‡å˜çš„æ£‹å­ï¼</red>"
+  game_over: "<red>æœ¬å±€å·²ç»“æŸï¼è¯·å¼€å§‹æ–°å±€ã€‚</red>"
+  check_notification: "<yellow><color>ï¼Œä½ çš„å›½ç‹è¢«å°†å†›äº†ï¼</yellow>"
+  stalemate_broadcast: "<gold>å’Œæ£‹ï¼</gold>"
+  insufficient_material: "<gold>å’Œæ£‹ï¼šå­åŠ›ä¸è¶³ã€‚</gold>"
+  no_game: "<red>æœªæ‰¾åˆ°è¿›è¡Œä¸­çš„å¯¹å±€ã€‚</red>"
+  not_player: "<red>ä½ ä¸æ˜¯è¿™å±€çš„ç©å®¶ã€‚</red>"
+  need_opponent: "<yellow>ç­‰å¾…å¯¹æ‰‹åŠ å…¥ã€‚</yellow>"
+  need_bets: "<yellow>åŒæ–¹éœ€åœ¨å¼€å§‹å‰ä¸‹æ³¨ã€‚</yellow>"
+  bet_invalid: "<red>ä¸‹æ³¨é‡‘é¢æ— æ•ˆã€‚</red>"
+  bet_set: "<green>ä¸‹æ³¨é‡‘é¢å·²è®¾ç½®ä¸º <amount>ã€‚</green>"
+  bet_locked: "<red>æœ¬å±€ä¸‹æ³¨å·²é”å®šã€‚</red>"
+  bet_insufficient: "<red>ä½™é¢ä¸è¶³ï¼Œæ— æ³•é”å®šä¸‹æ³¨ã€‚</red>"
+  resign_broadcast: "<yellow><player> å·²è®¤è¾“ã€‚</yellow>"
+  timeout_broadcast: "<yellow><winner> è¶…æ—¶è·èƒœã€‚</yellow>"
+  disconnect_loss: "<yellow><player> æ–­çº¿åˆ¤è´Ÿã€‚</yellow>"
+  command_usage: '<yellow>ç”¨æ³•ï¼š/chess bet <amount> | /chess resign | /chess reload</yellow>'
+  reload_done: '<green>è¯­è¨€æ–‡ä»¶å·²é‡è½½ã€‚</green>'
+  no_permission: '<red>ä½ æ²¡æœ‰æƒé™ã€‚</red>'
