Fix PacketEvents dependency name in plugin.yml

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -3,7 +3,7 @@ version: '1.0'
 main: me.son14ka.mineChess.MineChess
 api-version: '1.21'
 authors: [ SON14KA ]
-depend: [ PacketEvents ]
+depend: [ packetevents ]
 softdepend: [ Vault ]
 commands:
   chess:
