Add localized command UX, tab completion, and turn debug logging

--- a/src/main/resources/messages_zh.yml
+++ b/src/main/resources/messages_zh.yml
@@ -1,30 +1,36 @@
-﻿messages:
-  black: "<gray>Black</gray>"
-  white: "<white>White</white>"
-  turn_info: "<yellow>It's <color>'s move!</yellow>"
-  mate_broadcast: "<gold>Checkmate! <winner> wins.</gold>"
-  check_warning: "<red>You can't make this move: your king is under attack or will be!</red>"
-  wrong_cell: "<yellow>You can't make this move, choose another cell.</yellow>"
-  promotion_choice: "<red>First choose a piece to promote to!</red>"
-  game_over: "<red>The game is already over! Start a new one.</red>"
-  check_notification: "<yellow><color>, your king has been checked! Be careful!</yellow>"
-  stalemate_broadcast: "<gold>Stalemate! It's a draw!</gold>"
-  insufficient_material: "<gold>Draw: insufficient material.</gold>"
-  no_game: "<red>No active game found.</red>"
-  not_player: "<red>You are not a player in this game.</red>"
-  need_opponent: "<yellow>Waiting for opponent to join.</yellow>"
-  need_bets: "<yellow>Both players must place bets before starting.</yellow>"
-  bet_invalid: "<red>Invalid bet amount.</red>"
-  bet_set: "<green>Bet set to <amount>.</green>"
-  bet_locked: "<red>Bets are locked for this game.</red>"
-  bet_insufficient: "<red>Not enough balance to lock bets.</red>"
-  resign_broadcast: "<yellow><player> resigned.</yellow>"
-  timeout_broadcast: "<yellow><winner> wins on time.</yellow>"
-  disconnect_loss: "<yellow><player> disconnected and lost.</yellow>"
-  command_usage: '<yellow>Usage: /chess bet <amount> | /chess resign | /chess reload</yellow>'
-  reload_done: '<green>Messages reloaded.</green>'
-  no_permission: '<red>You do not have permission.</red>'
-  joined_white: "<green>You joined as White.</green>"
-  joined_black: "<green>You joined as Black.</green>"
-  start_timeout: "<yellow>Game canceled: start conditions were not met within 60 seconds.</yellow>"
-  board_reset: "<yellow>Board has been reset. Click the board to join a new game.</yellow>"
+messages:
+  black: "<gray>黑方</gray>"
+  white: "<white>白方</white>"
+  turn_info: "<yellow>现在轮到 <color> 行棋！</yellow>"
+  mate_broadcast: "<gold>将杀！<winner> 获胜。</gold>"
+  check_warning: "<red>此步无效：你的国王正被将军或将会被将军！</red>"
+  wrong_cell: "<yellow>这个走法不合法，请选择其他格子。</yellow>"
+  promotion_choice: "<red>请先选择要升变的棋子！</red>"
+  game_over: "<red>本局已经结束！请开始新对局。</red>"
+  check_notification: "<yellow><color> 的国王被将军了，请小心！</yellow>"
+  stalemate_broadcast: "<gold>逼和！本局平局。</gold>"
+  insufficient_material: "<gold>和棋：子力不足。</gold>"
+  no_game: "<red>未找到正在进行的对局。</red>"
+  not_player: "<red>你不是这局棋的玩家。</red>"
+  need_opponent: "<yellow>等待对手加入中。</yellow>"
+  need_bets: "<yellow>开局前双方都必须先下注。</yellow>"
+  bet_invalid: "<red>下注金额无效。</red>"
+  bet_set: "<green>已设置下注金额：<amount>。</green>"
+  bet_locked: "<red>本局下注已锁定。</red>"
+  bet_insufficient: "<red>余额不足，无法锁定下注。</red>"
+  resign_broadcast: "<yellow><player> 已认输。</yellow>"
+  timeout_broadcast: "<yellow><winner> 超时获胜。</yellow>"
+  disconnect_loss: "<yellow><player> 断线判负。</yellow>"
+  command_usage: "<yellow>用法：/chess <bet|resign|reload|help></yellow>"
+  command_unknown: "<red>未知子命令。</red>"
+  help_header: "<gold>MineChess 指令帮助：</gold>"
+  help_bet: "<yellow>/chess bet <amount> <gray>- 设置下注金额</gray></yellow>"
+  help_resign: "<yellow>/chess resign <gray>- 认输当前对局</gray></yellow>"
+  help_reload: "<yellow>/chess reload <gray>- 重载消息文件</gray></yellow>"
+  help_help: "<yellow>/chess help <gray>- 显示此帮助</gray></yellow>"
+  reload_done: "<green>消息文件已重载。</green>"
+  no_permission: "<red>你没有权限执行该操作。</red>"
+  joined_white: "<green>你已加入白方。</green>"
+  joined_black: "<green>你已加入黑方。</green>"
+  start_timeout: "<yellow>对局已取消：60 秒内未满足开局条件。</yellow>"
+  board_reset: "<yellow>棋盘已重置，点击棋盘可加入新对局。</yellow>"
