--- a/src/main/resources/messages_en.yml
+++ b/src/main/resources/messages_en.yml
@@ -21,7 +21,13 @@ messages:
   resign_broadcast: "<yellow><player> resigned.</yellow>"
   timeout_broadcast: "<yellow><winner> wins on time.</yellow>"
   disconnect_loss: "<yellow><player> disconnected and lost.</yellow>"
-  command_usage: '<yellow>Usage: /chess bet <amount> | /chess resign | /chess reload</yellow>'
+  command_usage: '<yellow>Usage: /chess <bet|resign|reload|help></yellow>'
+  command_unknown: "<red>Unknown subcommand.</red>"
+  help_header: "<gold>MineChess Commands:</gold>"
+  help_bet: "<yellow>/chess bet <amount> <gray>- place your bet</gray></yellow>"
+  help_resign: "<yellow>/chess resign <gray>- resign the current game</gray></yellow>"
+  help_reload: "<yellow>/chess reload <gray>- reload message files</gray></yellow>"
+  help_help: "<yellow>/chess help <gray>- show this help</gray></yellow>"
   reload_done: '<green>Messages reloaded.</green>'
   no_permission: '<red>You do not have permission.</red>'
   joined_white: "<green>You joined as White.</green>"
