--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -4,7 +4,7 @@ main: me.son14ka.mineChess.MineChess
 api-version: '1.21'
 authors: [ SON14KA ]
 depend: [ packetevents ]
-softdepend: [ Vault ]
+softdepend: [ Vault, CraftEngine ]
 commands:
   chess:
     description: MineChess commands
